--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,27 @@ body{
   box-sizing: border-box;
 }
 
-#GoTop{
+#progress-bar {
   position: fixed;
-  right: 1%;
-  bottom: 1%;
-  z-index: 10
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: #4F3422;
+  transform-origin: 0%;
+  z-index: 1000;
 }
 
 #hamburger{
   position: absolute;
   z-index: 10;
+}
+
+#GoTop{
+  position: fixed;
+  right: 1%;
+  bottom: 1%;
+  z-index: 10
 }
 
 #dropdown-menu {
@@ -141,6 +152,7 @@ body{
   
   .skillsbox{
     overflow-y: hidden;
+    max-width: 30vw;
 
     .align{
       display: flex;
@@ -217,8 +229,27 @@ footer{
     a{
       text-decoration: none;
       color: #4F3422;
+      display: block;
+      position: relative;
+      overflow: hidden;
       &:hover{
         color:#FFC53D;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left:0;
+        width: 100%;
+        height: 0.1em;
+        background-color: #FFC53D;
+        opacity: 1;
+        transform: translate3d(-100%, 0, 0);
+        transition: transform 300ms;
+      }
+      &:hover::after,
+      &:focus::after{
+      transform: translate3d(0, 0, 0);
       }
     }
   }
